@@ -95,6 +95,8 @@ Other changes:
 * Added preserveLastModified attribute to signjar task.
   Bugzilla report 30987.
 
+* Added isfileselected condition.
+
 Changes from Ant 1.6.2 to current Ant 1.6 CVS version
 =====================================================
 
